--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,13 +8,13 @@ $secondary: #17D8FF;
 $complementary: #5FB7E3;
 
 // Text
-$headline-big: 30px;
-$headline-medium: 26px;
-$headline-small: 22px;
-$headline-tiny: 18px;
-$text-big: 16px;
-$text-medium: 14px;
-$text-small: 12px;
+$headline-big: 2rem;
+$headline-medium: 1.8rem;
+$headline-small: 1.6rem;
+$headline-tiny: 1.4rem;
+$text-big: 1.2rem;
+$text-medium: 1rem;
+$text-small: 0.8rem;
 
 // font-family: 'Poppins', sans-serif;
 * {
@@ -24,7 +24,6 @@ $text-small: 12px;
 
 html,
 body {
-  width: 100vw;
   background-color: $primary;
 }
 
@@ -46,17 +45,17 @@ h2 {
 h3 {
   font-size: $text-medium;
   font-weight: 300;
-  margin: 5px 0;
+  margin: 0.4rem 0;
+  color: $gray;
 }
 
 p {
   font-size: $text-big;
   font-family: 'Poppins', 'Noto Sans', Arial;
-  margin: 15px 0;
+  margin: 1rem 0;
 }
 
 main {
-  width: 100vw;
   box-sizing: border-box;
 }
 
@@ -66,4 +65,8 @@ li {
 
 a {
   text-decoration: none;
+}
+
+.Section {
+  margin: 4rem 1.4rem 6rem 1.4rem;
 }
