--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -1,14 +1,27 @@
 .Experience {
-  margin: 0 20px 60px 20px;
+
+  &__item {
+    &-year {
+      font-size: $text-small;
+      color: $gray;
+      padding-right: 2rem;
+    }
+
+    a {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 
   ul {
-    margin: 15px 0;
-    padding-left: 20px;
+    margin: 1rem 0;
+    padding-left: 1.4rem;
 
     li {
       list-style: disc;
       color: $white;
-      margin-bottom: 20px;
+      margin-bottom: 1.4rem;
+
 
       h4 {
         font-size: $headline-tiny;
@@ -17,8 +30,15 @@
 
       p {
         font-size: $text-big;
-        margin: 5px 0;
+        margin: 0.4rem 0;
       }
     }
+  }
+}
+
+@media (min-width: 1024px) {
+  .Experience {
+    align-self: center;
+    width: 880px;
   }
 }
