--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -1,12 +1,14 @@
 .Layout {
   border-left: 2px solid $complementary;
   border-right: 2px solid $complementary;
-  margin: 40px 20px 0 20px;
-  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 2.4rem 1.4rem 0 1.4rem;
+  padding-top: 1.4rem;
 
   &__social,
   &__mail {
-    width: 40px;
+    width: 2.4rem;
     height: 200px;
     position: fixed;
     top: 200px;
@@ -19,7 +21,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     left: 0;
-    padding: 10px 0;
+    padding: 0.8rem 0;
 
     .twitter {
       background-image: url('..//assets/Twitter\ black.svg');
@@ -38,22 +40,22 @@
     }
 
     a {
-      width: 15px;
-      height: 15px;
+      width: 1rem;
+      height: 1rem;
       padding: 5px;
       border-radius: 50%;
       background-size: cover;
       background-repeat: no-repeat;
 
       &:hover {
-        box-shadow: 0 0 15px 1px $secondary;
+        box-shadow: 0 0 1rem 1px $secondary;
       }
     }
   }
 
   &__mail {
     right: 0;
-    padding: 10px 0;
+    padding: 0.8rem 0;
 
     a {
       height: 100%;
@@ -64,7 +66,12 @@
       span {
         color: $complementary;
         transform: rotate(90deg);
-        font-size: $text-small;
+        font-size: $text-medium;
+
+        &:hover {
+          text-decoration: underline;
+          text-decoration-color: #17d8ff;
+        }
       }
     }
   }
