--- a/src/styles/components/_learning.scss
+++ b/src/styles/components/_learning.scss
@@ -1,5 +1,4 @@
 .Learning {
-  margin: 0 20px 60px 20px;
 
   ul {
     margin: 15px 0;
@@ -12,6 +11,10 @@
 
       &:hover {
         cursor: pointer;
+
+        img {
+          filter: none;
+        }
       }
 
       div {
@@ -36,7 +39,15 @@
       img {
         width: 50px;
         height: 50px;
+        filter: grayscale(100%);
       }
     }
+  }
+}
+
+@media (min-width: 1024px) {
+  .Learning {
+    align-self: center;
+    width: 880px;
   }
 }
