--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -14,7 +14,7 @@
     padding: 0;
 
     li {
-      margin-bottom: 20px;
+      margin-bottom: 2rem;
 
       a {
         color: $white;
@@ -29,5 +29,21 @@
 
   &__open {
     display: flex;
+    animation: fadeIn 0.3s;
+
+    ul>li>a:hover {
+      text-decoration: underline;
+      text-decoration-color: $secondary;
+    }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
