--- a/src/styles/components/_principal.scss
+++ b/src/styles/components/_principal.scss
@@ -1,15 +1,22 @@
 .Principal {
   border: 1px solid $white;
   border-radius: 5px;
-  padding: 10px 20px;
-  margin: 30px 20px 60px 20px;
+  padding: 0.8rem 1.4rem;
 
   h1 {
-    font-size: 20px;
-    margin: 10px 0;
+    font-size: 1.8rem;
+    margin: 0.8rem 0;
+    text-decoration: underline;
   }
 
   p {
-    font-size: 18px;
+    font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .Principal {
+    align-self: center;
+    width: 880px;
   }
 }
